[feat] add program category